Use TransactionTemplate for MedicinalProductDefinition